{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 43,
  "lineage": "ce6d60ff-01d4-fddb-0939-da0067a97dc1",
  "resources": [
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:internet-gateway/igw-003c1491018da5a4c",
            "id": "igw-003c1491018da5a4c",
            "owner_id": "515149434592",
            "tags": {
              "Name": "tokyo Internet Gateway"
            },
            "tags_all": {
              "Name": "tokyo Internet Gateway"
            },
            "vpc_id": "vpc-049691e07cf957fbd"
          },
          "dependencies": [
            "module.rds_vpc.aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "tokyo-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:network-acl/acl-0ff41f3314f47b35f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0ff41f3314f47b35f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "515149434592",
            "subnet_ids": [
              "subnet-09355e36a31861764"
            ],
            "tags": {
              "Name": "tokyo-sg-0"
            },
            "tags_all": {
              "Name": "tokyo-sg-0"
            },
            "vpc_id": "vpc-049691e07cf957fbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_vpc.aws_subnet.private",
            "module.rds_vpc.aws_vpc.tokyo-vpc",
            "module.rds_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:network-acl/acl-0cd89d8f971e93740",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0cd89d8f971e93740",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "515149434592",
            "subnet_ids": [
              "subnet-095a1853fdaeecad1"
            ],
            "tags": {
              "Name": "tokyo-sg-1"
            },
            "tags_all": {
              "Name": "tokyo-sg-1"
            },
            "vpc_id": "vpc-049691e07cf957fbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_vpc.aws_subnet.private",
            "module.rds_vpc.aws_vpc.tokyo-vpc",
            "module.rds_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "tokyo-internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-003c1491018da5a4c",
            "id": "r-rtb-0cbf765bd1c4c5e201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cbf765bd1c4c5e20",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_vpc.aws_internet_gateway.tokyo-igw",
            "module.rds_vpc.aws_route_table.tokyo-public-route",
            "module.rds_vpc.aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:route-table/rtb-0cbf765bd1c4c5e20",
            "id": "rtb-0cbf765bd1c4c5e20",
            "owner_id": "515149434592",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003c1491018da5a4c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo Public Route Table"
            },
            "tags_all": {
              "Name": "tokyo Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-049691e07cf957fbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_vpc.aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05020ea0ee40c8889",
            "route_table_id": "rtb-0cbf765bd1c4c5e20",
            "subnet_id": "subnet-09355e36a31861764"
          },
          "dependencies": [
            "module.rds_vpc.aws_route_table.tokyo-public-route",
            "module.rds_vpc.aws_subnet.private",
            "module.rds_vpc.aws_vpc.tokyo-vpc",
            "module.rds_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044a059e59c0c33f3",
            "route_table_id": "rtb-0cbf765bd1c4c5e20",
            "subnet_id": "subnet-095a1853fdaeecad1"
          },
          "dependencies": [
            "module.rds_vpc.aws_route_table.tokyo-public-route",
            "module.rds_vpc.aws_subnet.private",
            "module.rds_vpc.aws_vpc.tokyo-vpc",
            "module.rds_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tokyo-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:security-group/sg-0abd71069015a1520",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0abd71069015a1520",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231021033044137100000001",
            "name_prefix": "terraform-",
            "owner_id": "515149434592",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-sg-0"
            },
            "tags_all": {
              "Name": "tokyo-sg-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-049691e07cf957fbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_vpc.aws_vpc.tokyo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:security-group/sg-02209fcbab6ce277d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-02209fcbab6ce277d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231021033044137100000002",
            "name_prefix": "terraform-",
            "owner_id": "515149434592",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-sg-1"
            },
            "tags_all": {
              "Name": "tokyo-sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-049691e07cf957fbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds_vpc.aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:subnet/subnet-09355e36a31861764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09355e36a31861764",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "515149434592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-subnets-0"
            },
            "tags_all": {
              "Name": "tokyo-subnets-0"
            },
            "vpc_id": "vpc-049691e07cf957fbd"
          },
          "dependencies": [
            "module.rds_vpc.aws_vpc.tokyo-vpc",
            "module.rds_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:subnet/subnet-095a1853fdaeecad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095a1853fdaeecad1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "515149434592",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tokyo-subnets-1"
            },
            "tags_all": {
              "Name": "tokyo-subnets-1"
            },
            "vpc_id": "vpc-049691e07cf957fbd"
          },
          "dependencies": [
            "module.rds_vpc.aws_vpc.tokyo-vpc",
            "module.rds_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.rds_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:515149434592:vpc/vpc-049691e07cf957fbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04eec918ff3563106",
            "default_route_table_id": "rtb-0e3b32859cb4e1c4c",
            "default_security_group_id": "sg-04fbe72456d0afef2",
            "dhcp_options_id": "dopt-06030f7bc22e7377f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049691e07cf957fbd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3b32859cb4e1c4c",
            "owner_id": "515149434592",
            "tags": {
              "Name": "tokyo Virtual Private Cloud"
            },
            "tags_all": {
              "Name": "tokyo Virtual Private Cloud"
            }
          }
        }
      ]
    }
  ]
}